--- a/src/parts/contacts-title.html
+++ b/src/parts/contacts-title.html
@@ -6,10 +6,34 @@
 					Контакты
 				</div>
 				<div class="txt-cent conts__info">
-					<p> 
+					<div class="your-city__cont d-i-b">
 						<a href="#">Вся Россия<i class="icon icon-arrow-dwn"></i></a>	
 						
-					</p>
+						<div class="choose-city">
+							<div class="choose-city__menu clearfix">
+								<ul>
+									<li><a href="#">Москва</a></li>
+									<li><a href="#">Магадан</a></li>
+									<li><a href="#">Магнитогорск</a></li>
+									<li><a href="#">Нижневартовск</a></li>
+									<li><a href="#">Нижний Новгород</a></li>
+									<li><a href="#">Новосибирск</a></li>
+									<li><a href="#">Нижний Тагил</a></li>
+								</ul>
+
+								<ul>
+									<li><a href="#">Москва</a></li>
+									<li><a href="#">Магадан</a></li>
+									<li><a href="#">Магнитогорск</a></li>
+									<li><a href="#">Нижневартовск</a></li>
+									<li><a href="#">Нижний Новгород</a></li>
+									<li><a href="#">Новосибирск</a></li>
+									<li><a href="#">Нижний Тагил</a></li>
+								</ul>
+							</div>
+						</div>	
+
+					</div>
 					<p class="c-red">
 						13 офисов продаж
 					</p>
