--- a/src/production.html
+++ b/src/production.html
@@ -86,6 +86,19 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="blck serv__blck">
+							<div class="pagin">
+								<a href="#">
+									Главная
+								</a>
+								<span class="sep">/</span>
+								<a href="#">
+									Пластиковые окна
+								</a>
+								<span class="sep">/</span>
+								<span>
+									Оконная система REHAU Briliant Design
+								</span>
+							</div>
 							<div class="sect-title">
 								Галерея-портфолио, заголовок
 							</div>
