--- a/src/services.html
+++ b/src/services.html
@@ -12,99 +12,115 @@
 				
 				<div class="row letters">
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Замер
-							</p>
-							<p>
-								<b>Бесплатно</b>
-							</p>
-							<p class="letters__foot">
-								По результатам замера мы проектируем будущие оконные конструкции
-							</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Замер
+								</p>
+								<p>
+									<b>Бесплатно</b>
+								</p>
+								<p class="letters__foot">
+									По результатам замера мы проектируем будущие оконные конструкции
+								</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Доставка
-							</p>
-							<p><b>600р</b></p>
-							<p class="letters__foot">
-								<span>
-									бесплатно от 13 000 Р									
-								</span>
-							</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Доставка
+								</p>
+								<p><b>600р</b></p>
+								<p class="letters__foot">
+									<span>
+										бесплатно от 13 000 Р									
+									</span>
+								</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Монтаж
-							</p>
-							<p><b>от 1000Р</b></p>
-							<p class="letters__foot">Каждое окно устанавливается специалистами по индивидуальным расценкам</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Монтаж
+								</p>
+								<p><b>от 1000Р</b></p>
+								<p class="letters__foot">Каждое окно устанавливается специалистами по индивидуальным расценкам</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Отделка откосов
-							</p>
-							<p><b>от 1000Р</b></p>
-							<p class="letters__foot">Аккуратное оформление окна по приемлемой цене</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Отделка откосов
+								</p>
+								<p><b>от 1000Р</b></p>
+								<p class="letters__foot">Аккуратное оформление окна по приемлемой цене</p>
+							</div>
+						</a>
 					</div>
 				</div>
 				
 				<div class="row letters">
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Вывоз мусора
-							</p>
-							<p><b>от 1000Р</b></p>
-							<p class="letters__foot">
-								Упаковка отходов
-								и их вынос на лестничную
-								площадку <span>включены в цену</span> 
-							</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Вывоз мусора
+								</p>
+								<p><b>от 1000Р</b></p>
+								<p class="letters__foot">
+									Упаковка отходов
+									и их вынос на лестничную
+									площадку <span>включены в цену</span> 
+								</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								5 лет гарантии
-							</p>
-							<p><b>Бесплатно</b></p>
-							<p class="letters__foot">
-								<span>Бесплатное обслуживание</span>
-								в течение гарантийного
-								периода
-							</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									5 лет гарантии
+								</p>
+								<p><b>Бесплатно</b></p>
+								<p class="letters__foot">
+									<span>Бесплатное обслуживание</span>
+									в течение гарантийного
+									периода
+								</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Отделка балконов и лоджий
-							</p>
-							<p><b>от 5000Р</b></p>
-							<p class="letters__foot">
-								<span>Бесплатное обслуживание</span>
-								в течение гарантийного
-								периода
-							</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Отделка балконов и лоджий
+								</p>
+								<p><b>от 5000Р</b></p>
+								<p class="letters__foot">
+									<span>Бесплатное обслуживание</span>
+									в течение гарантийного
+									периода
+								</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-md-3">
-						<div class="blck letters__blck">
-							<p class="letters__head">
-								Ремонт окон
-							</p>
-							<p><b>от 2000Р</b></p>
-							<p class="letters__foot">Оперативное решение проблем с окнами любой конфигурации</p>
-						</div>
+						<a href="#">
+							<div class="blck letters__blck">
+								<p class="letters__head">
+									Ремонт окон
+								</p>
+								<p><b>от 2000Р</b></p>
+								<p class="letters__foot">Оперативное решение проблем с окнами любой конфигурации</p>
+							</div>
+						</a>
 					</div>
 				</div>
 
