--- a/src/about.html
+++ b/src/about.html
@@ -51,20 +51,21 @@
 				
 				<div class="row">
 					<div class="col-md-3">
-						<ul class="side__menu">
-							<li><a href="#">О нас</a></li>
-							<li><a href="#">Вакансии</a></li>
-							<li><a href="#">Реквизиты</a></li>
-							<li><a href="#">Сертификаты</a></li>
-							<li><a href="#">Благодарности</a></li>
-							<li><a href="#">Фотогалерея</a></li>
-							<li><a href="#">Видеоматериалы</a></li>
-							<li><a href="#">Отзывы</a></li>
-							<li><a href="#">Новости компании</a></li>
+						<ul class="side__menu elem-1__menu">
+							<li><a class="acctiiff" href="#imgg1">О нас</a></li>
+							<li><a href="#imgg2">Вакансии</a></li>
+							<li><a href="#imgg3">Реквизиты</a></li>
+							<li><a href="#imgg4">Сертификаты</a></li>
+							<li><a href="#imgg5">Благодарности</a></li>
+							<li><a href="#imgg6">Фотогалерея</a></li>
+							<li><a href="#imgg7">Видеоматериалы</a></li>
+							<li><a href="#imgg8">Отзывы</a></li>
+							<li><a href="#imgg9">Новости компании</a></li>
 						</ul>
 					</div>
 					<div class="col-md-9">
-						<div class="content">
+						
+						<div class="content elem-1__img" id="imgg1">
 							<p class="content__head">
 								О компании
 							</p>
@@ -75,6 +76,103 @@
 								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
 							</p>
 						</div>
+
+						<div class="content elem-1__img" id="imgg2">
+							<p class="content__head">
+								Вакансии
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg3">
+							<p class="content__head">
+								Реквизиты
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg4">
+							<p class="content__head">
+								Сертификаты
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg5">
+							<p class="content__head">
+								Благодарности
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg6">
+							<p class="content__head">
+								Фотогалерея
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg7">
+							<p class="content__head">
+								Видеоматериалы
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg8">
+							<p class="content__head">
+								Отзывы
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
+						<div class="content elem-1__img" id="imgg9">
+							<p class="content__head">
+								Новости компании
+							</p>
+							<p>
+								Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий играет важную роль в формировании новых предложений. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки направлений прогрессивного развития. Таким образом рамки и место обучения кадров представляет собой интересный эксперимент проверки соответствующий условий активизации.
+							</p>
+							<p>
+								Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности способствует подготовки и реализации соответствующий 
+							</p>
+						</div>
+
 					</div>
 				</div>
 
