--- a/src/elem.html
+++ b/src/elem.html
@@ -314,33 +314,40 @@
 				<div class="col-md-3">
 					<div class="blck elem-1__blck-1">
 						<ul class="elem-1__menu">
-							<li><a href="#">Технологии</a></li>
-							<li><a href="#">Статьи</a></li>
-							<li><a href="#">Вопросы и ответы</a></li>
-							<li><a href="#">Фотогалерея</a></li>
-							<li><a href="#">Полезная информация</a></li>
-							<li><a href="#">Вопросы и ответы</a></li>
-							<li><a href="#">Фотогалерея</a></li>
-							<li><a href="#">Полезная информация</a></li>
+							<li><a class="acctiiff" href="#imgg1">Технологии</a></li>
+							<li><a href="#imgg2">Статьи</a></li>
+							<li><a href="#imgg3">Вопросы и ответы</a></li>
+							<li><a href="#imgg4">Фотогалерея</a></li>
+							<li><a href="#imgg5">Полезная информация</a></li>
+							<li><a href="#imgg6">Вопросы и ответы</a></li>
+							<li><a href="#imgg7">Фотогалерея</a></li>
+							<li><a href="#imgg8">Полезная информация</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="blck elem-1__blck-2">
-						<img src="img/elem-1.jpg" alt="">
+						<img class="elem-1__img" id="imgg1" src="img/elem-1.jpg" alt="">
+						<img class="elem-1__img" id="imgg2" src="img/elemm-2.jpg" alt="">
+						<img class="elem-1__img" id="imgg3" src="img/elemm-3.jpg" alt="">
+						<img class="elem-1__img" id="imgg4" src="img/elemm-4.jpg" alt="">
+						<img class="elem-1__img" id="imgg5" src="img/elemm-5.jpg" alt="">
+						<img class="elem-1__img" id="imgg6" src="img/elemm-6.jpg" alt="">
+						<img class="elem-1__img" id="imgg7" src="img/elemm-7.jpg" alt="">
+						<img class="elem-1__img" id="imgg8" src="img/elemm-8.jpg" alt="">	
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="blck elem-1__blck-3">
 						<ul class="elem-1__menu">
-							<li><a href="#">Технологии</a></li>
-							<li><a href="#">Статьи</a></li>
-							<li><a href="#">Вопросы и ответы</a></li>
-							<li><a href="#">Фотогалерея</a></li>
-							<li><a href="#">Полезная информация</a></li>
-							<li><a href="#">Вопросы и ответы</a></li>
-							<li><a href="#">Фотогалерея</a></li>
-							<li><a href="#">Полезная информация</a></li>
+							<li><a href="#imgg8">Технологии</a></li>
+							<li><a href="#imgg7">Статьи</a></li>
+							<li><a href="#imgg6">Вопросы и ответы</a></li>
+							<li><a href="#imgg5">Фотогалерея</a></li>
+							<li><a href="#imgg4">Полезная информация</a></li>
+							<li><a href="#imgg3">Вопросы и ответы</a></li>
+							<li><a href="#imgg2">Фотогалерея</a></li>
+							<li><a href="#imgg1">Полезная информация</a></li>
 						</ul>
 					</div>
 				</div>
