--- a/src/parts/oformit-zayavku2.html
+++ b/src/parts/oformit-zayavku2.html
@@ -23,6 +23,7 @@
 							<input class="form-inp" type="text" id="time" placeholder="Необязательное поле">
 						</div>
 						<div class="col-md-12">
+							<label for="agree" class="cusst__agree"><input type="checkbox" name="agree" id="agree" checked=""> <span></span> Нажимая на кнопку "Начать сотрудничество" Вы принимаете условия <a href="#">политики конфиденциальности в отношении обработки персональных данных</a></label>
 							<button type="submit" class="butt form-subm center-block">Начать сотрудничество</button>
 						</div>
 					</form>
