--- a/src/production.html
+++ b/src/production.html
@@ -678,7 +678,7 @@
 
 <script>
 	$('#sliddr1_1').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 1,
 	  slidesToScroll: 1,
 	  prevArrow: '#sliddr__wrapp_1 .sliddr__prev',
@@ -687,7 +687,7 @@
 	});
 
 	$('#sliddr1_2').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 6,
 	  slidesToScroll: 1,
 	  arrows: false,
@@ -707,7 +707,7 @@
 
 
 	$('#sliddr2_1').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 1,
 	  slidesToScroll: 1,
 	  prevArrow: '#sliddr__wrapp_2 .sliddr__prev',
@@ -716,7 +716,7 @@
 	});
 
 	$('#sliddr2_2').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 6,
 	  slidesToScroll: 1,
 	  arrows: false,
@@ -736,7 +736,7 @@
 
 
 	$('#sliddr3_1').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 1,
 	  slidesToScroll: 1,
 	  prevArrow: '#sliddr__wrapp_3 .sliddr__prev',
@@ -745,7 +745,7 @@
 	});
 
 	$('#sliddr3_2').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 6,
 	  slidesToScroll: 1,
 	  arrows: false,
@@ -765,7 +765,7 @@
 
 
 	$('#sliddr4_1').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 1,
 	  slidesToScroll: 1,
 	  prevArrow: '#sliddr__wrapp_4 .sliddr__prev',
@@ -774,7 +774,7 @@
 	});
 
 	$('#sliddr4_2').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 6,
 	  slidesToScroll: 1,
 	  arrows: false,
@@ -794,7 +794,7 @@
 
 
 	$('#sliddr__reviewz').slick({
-	  infinite: true,
+	  infinite: false,
 	  slidesToShow: 2,
 	  slidesToScroll: 1,
 	  dots: true,
