--- a/src/index.html
+++ b/src/index.html
@@ -1,166 +1,176 @@
 @@include('parts/head1.html')	
 
-	
-	<div class="new__slider">
-		<div>
-			<div class="jumbo">
-				<div class="flexx flexx-wrap jumbo__cont">
-					<div class="jumbo__blck blck-1">
-						<div class="jumbo__inn inn-1">
-							<div class="jumbo__range">
-								<div class="jumbo__range-tbl tbl">
-									<div class="tbl-cell cell-1 mdl">
-										<div class="jumbo__range-num">
-											25
-										</div>
-									</div>
-									<div class="tbl-cell cell-2 mdl">
-										<span>лет</span>
-										Компании
-									</div>
-								</div><!-- .jumbo__range-tbl -->
-							</div><!-- .jumbo__range -->
-							<img src="img/jumbo1.jpg" class="o-f-c jumbo__bg" alt="">
-						</div>
-					</div>
-					<div class="jumbo__blck blck-2">
-						<div class="jumbo__inn inn-2">
-							<div class="row">
-								<div class="col-md-8">
-									<img src="img/jumbo2.jpg" class="jumbo__logo" alt="">
-									<div class="jumbo__head">
-										&laquoТО, ЧТО <span>ГОСТ</span>
-										ПРОПИСАЛ!&raquo
-									</div>
-									<div class="jumbo__descr">
-										<p>
-											Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании существенных финансовых и административных условий. 
-										</p>
-										<p>
-											<button class="jumbo__butt to-mod butt butt-red">Заказать</button>
-										</p> 
-									</div>
-									<div class="jumbo__small">
-										<p>
-											Мелкий пояснительный текст
-										</p>
-									</div>
+		<div class="new__slider-wrapp">	
+			
+			<div class="new__slider-control">	
+				
+				<div class=" sliddr__control sliddr__prev new__slider-prev" style=""><i class="icon icon-arr-prev active"></i> <i class="icon icon-arr-prev-h"></i></div>
+				<div class=" sliddr__control sliddr__next new__slider-next" style=""><i class="icon icon-arr-next active"></i> <i class="icon icon-arr-next-h"></i></div>		
+
+			</div>
+				
+
+
+			<div class="new__slider">
+				<div>
+					<div class="jumbo">
+						<div class="flexx flexx-wrap jumbo__cont">
+							<div class="jumbo__blck blck-1">
+								<div class="jumbo__inn inn-1">
+									<div class="jumbo__range">
+										<div class="jumbo__range-tbl tbl">
+											<div class="tbl-cell cell-1 mdl">
+												<div class="jumbo__range-num">
+													25
+												</div>
+											</div>
+											<div class="tbl-cell cell-2 mdl">
+												<span>лет</span>
+												Компании
+											</div>
+										</div><!-- .jumbo__range-tbl -->
+									</div><!-- .jumbo__range -->
+									<img src="img/jumbo1.jpg" class="o-f-c jumbo__bg" alt="">
 								</div>
-								<div class="col-md-4">
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
-									</div>
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
-									</div>
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
-									</div>
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
+							</div>
+							<div class="jumbo__blck blck-2">
+								<div class="jumbo__inn inn-2">
+									<div class="row">
+										<div class="col-md-8">
+											<img src="img/jumbo2.jpg" class="jumbo__logo" alt="">
+											<div class="jumbo__head">
+												&laquoТО, ЧТО <span>ГОСТ</span>
+												ПРОПИСАЛ!&raquo
+											</div>
+											<div class="jumbo__descr">
+												<p>
+													Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании существенных финансовых и административных условий. 
+												</p>
+												<p>
+													<button class="jumbo__butt to-mod butt butt-red">Заказать</button>
+												</p> 
+											</div>
+											<div class="jumbo__small">
+												<p>
+													Мелкий пояснительный текст
+												</p>
+											</div>
+										</div>
+										<div class="col-md-4">
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
+					</div><!-- .jumbo -->
 				</div>
-			</div><!-- .jumbo -->
-		</div>
 
 
-		<div>
-			<div class="jumbo">
-				<div class="flexx flexx-wrap jumbo__cont">
-					<div class="jumbo__blck blck-1">
-						<div class="jumbo__inn inn-1">
-							<div class="jumbo__range">
-								<div class="jumbo__range-tbl tbl">
-									<div class="tbl-cell cell-1 mdl">
-										<div class="jumbo__range-num">
-											25
-										</div>
-									</div>
-									<div class="tbl-cell cell-2 mdl">
-										<span>лет</span>
-										Компании
-									</div>
-								</div><!-- .jumbo__range-tbl -->
-							</div><!-- .jumbo__range -->
-							<img src="img/jumbo1.jpg" class="o-f-c jumbo__bg" alt="">
-						</div>
-					</div>
-					<div class="jumbo__blck blck-2">
-						<div class="jumbo__inn inn-2">
-							<div class="row">
-								<div class="col-md-8">
-									<img src="img/jumbo2.jpg" class="jumbo__logo" alt="">
-									<div class="jumbo__head">
-										&laquoТО, ЧТО <span>ГОСТ</span>
-										ПРОПИСАЛ!&raquo
-									</div>
-									<div class="jumbo__descr">
-										<p>
-											Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании существенных финансовых и административных условий. 
-										</p>
-										<p>
-											<button class="jumbo__butt to-mod butt butt-red">Заказать</button>
-										</p> 
-									</div>
-									<div class="jumbo__small">
-										<p>
-											Мелкий пояснительный текст
-										</p>
-									</div>
+				<div>
+					<div class="jumbo">
+						<div class="flexx flexx-wrap jumbo__cont">
+							<div class="jumbo__blck blck-1">
+								<div class="jumbo__inn inn-1">
+									<div class="jumbo__range">
+										<div class="jumbo__range-tbl tbl">
+											<div class="tbl-cell cell-1 mdl">
+												<div class="jumbo__range-num">
+													25
+												</div>
+											</div>
+											<div class="tbl-cell cell-2 mdl">
+												<span>лет</span>
+												Компании
+											</div>
+										</div><!-- .jumbo__range-tbl -->
+									</div><!-- .jumbo__range -->
+									<img src="img/jumbo1.jpg" class="o-f-c jumbo__bg" alt="">
 								</div>
-								<div class="col-md-4">
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
-									</div>
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
-									</div>
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
-									</div>
-									<div class="jumbo__it">
-										<img src="img/rectangle1.jpg" alt="">
-										<p>
-											НАЗВАНИЕ ПУНКТА
-										</p>
+							</div>
+							<div class="jumbo__blck blck-2">
+								<div class="jumbo__inn inn-2">
+									<div class="row">
+										<div class="col-md-8">
+											<img src="img/jumbo2.jpg" class="jumbo__logo" alt="">
+											<div class="jumbo__head">
+												&laquoТО, ЧТО <span>ГОСТ</span>
+												ПРОПИСАЛ!&raquo
+											</div>
+											<div class="jumbo__descr">
+												<p>
+													Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании существенных финансовых и административных условий. 
+												</p>
+												<p>
+													<button class="jumbo__butt to-mod butt butt-red">Заказать</button>
+												</p> 
+											</div>
+											<div class="jumbo__small">
+												<p>
+													Мелкий пояснительный текст
+												</p>
+											</div>
+										</div>
+										<div class="col-md-4">
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+											<div class="jumbo__it">
+												<img src="img/rectangle1.jpg" alt="">
+												<p>
+													НАЗВАНИЕ ПУНКТА
+												</p>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
+					</div><!-- .jumbo -->
 				</div>
-			</div><!-- .jumbo -->
-		</div>
 
 
-	</div>
+			</div><!-- .new__slider -->
 
-
+		</div>	<!-- 	.new__slider-wrapp -->	
 		
 
 
