--- a/src/parts/oformit-zayavku.html
+++ b/src/parts/oformit-zayavku.html
@@ -21,6 +21,8 @@
 							<input class="form-inp" type="text" id="time" placeholder="Необязательное поле">
 						</div>
 						<div class="col-md-12">
+							<label for="agree" class="cusst__agree"><input type="checkbox" name="agree" id="agree" checked=""> <span></span> Нажимая на кнопку "Отправить" Вы принимаете условия <a href="#">политики конфиденциальности в отношении обработки персональных данных</a></label>					
+
 							<button type="submit" class="butt form-subm center-block">Отправить</button>
 						</div>
 					</form>
