--- a/src/parts/oformit-zayavku3.html
+++ b/src/parts/oformit-zayavku3.html
@@ -24,6 +24,7 @@
 							<textarea name="mess" id="" cols="30" rows="10" class="form-area" placeholder="Необязательное поле"></textarea>
 						</div>
 						<div class="col-md-12">
+							<label for="agree" class="cusst__agree"><input type="checkbox" name="agree" id="agree" checked=""> <span></span> Нажимая на кнопку "Начать сотрудничество" Вы принимаете условия <a href="#">политики конфиденциальности в отношении обработки персональных данных</a></label>
 							<button type="submit" class="butt form-subm center-block">Отправить</button>
 						</div>
 					</form>
