--- a/src/elem.html
+++ b/src/elem.html
@@ -793,7 +793,7 @@
 							<label for="adress">Телефон:</label>
 							<input class="form-inp" type="text" id="adress" placeholder="Адрес в свободной форме">
 						</div>
-						<div class="col-md-12">
+						<div class="col-md-12 visible-lg-block">
 							<p>
 								<button type="submit" class="butt form-subm jumbo__3-subm">Вызвать</button>
 								<span class="jumbo__small">Мелкий пояснительный текст</span>
@@ -810,6 +810,12 @@
 						<input type="text" id="quant" class="form-inp kd89-num__spinner" value="1">
 						<span class="increase">&rsaquo;</span>							
 					</div>						
+				</div>
+				<div class="col-md-12 hidden-lg">
+					<p>
+						<button type="submit" class="butt form-subm jumbo__3-subm">Вызвать</button>
+						<span class="jumbo__small">Мелкий пояснительный текст</span>
+					</p>
 				</div>
 				<img src="img/elem-2.png" alt="" class="elem-7__img">
 			</form>
